overlays/uksouth-sandbox/perf-api-v1/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: perf-api-v1.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
    - host: perf-api-v1.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /ubiquity/
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /content
            pathType: Prefix
            backend:
              service:
                name: iris-api
                port:
                  number: 80
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: healthz
                port:
                  number: 80
  tls:
    - hosts:
        - perf-api-v1.${cluster_name}.${location}.bink.sh
      secretName: perf-api-v1.${cluster_name}.${location}.bink.sh
